@@ -81,6 +81,13 @@ Unauthorized:
   ...     status = response.getStatus()
   ...     self.failUnless(status == 401, (status, 401, view_name))
 
+Methods of views which were not explicitly declared as allowed should not be
+accessible TTW, even if we have the permission to render the view:
+
+  >>> response = self.publish('/test_folder_1_/testoid/eagle.method/mouse',
+  ...                         basic='viewer:secret')
+  >>> self.assertEqual(response.getStatus(), 401)
+
 The same should apply for the user if he has all other permissions
 except 'View management screens':
 
@@ -120,6 +127,7 @@ All public views should always be accessible by anyone:
   ...     response = self.publish('/test_folder_1_/testoid/%s' % view_name)
   ...     status = response.getStatus()
   ...     self.failUnless(status == 200, (status, 200, view_name))
+
 
 
 Miscellaneous
